# rust_journey

./: README.md
ms01_hyper_microservice/: .env  Cargo.toml  README.md
ms01_hyper_microservice/src/: config.rs  main.rs
p01_hello_world/: Cargo.toml
p02_variables/: Cargo.toml
p02_variables/src/: main.rs
p03_functions/: Cargo.toml
p03_functions/src/: main.rs
p04_builder_pattern/: Cargo.toml
p04_builder_pattern/src/: main.rs  point.rs  shape.rs
p05_cargo_pg/: Cargo.toml  README.md
p05_cargo_pg/codar/: Cargo.toml
p05_cargo_pg/codar/examples/e01_simple_usage/: main.rs
p05_cargo_pg/codar/src/math/: advanced.rs  mod.rs  simple.rs  tests.rs
p05_cargo_pg/codar/tests/: integration_test.rs
p06_generics/: Cargo.toml  README.md
p06_generics/src/: functions.rs  main.rs
