[package]
name = "ms01_hyper_microservice"
version = "0.1.0"
authors = ["Ali Rashidi <alirashidi127@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dotenv = "0.15.0"
futures = "0.3.6"
hyper = "0.13.8"
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
